[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[license]
file="LICENSE"

[tool.jupyter-packaging.options]
skip-if-exists = ["mutableai_optin/labextension/static/style.js"]
ensured-targets = ["mutableai_optin/labextension/static/style.js", "mutableai_optin/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["mutableai_optin/labextension/**", "yarn.lock", ".*", "package-lock.json"]
